# CudaHelper

./: CMakeLists.txt  CuPtr.cuh  CudaManager.cu  CudaManager.h  Makefile  kernel.cu  kernel.h  main.cpp  readme.md  readme.txt
include/: ArraySum.h  CuPtr.cuh  kernel.h
src/: ArraySum.cu  CudaManager.cu  kernel.cu  main.cpp
